--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -51,6 +51,12 @@ body {
     z-index: 1;
 }
 
+@media only screen and (max-width: 900px) {
+    .background-image {
+        margin-bottom: 8%;
+    }
+}
+
 /* Nav and logo wrapper styles ------------------------------------------------ */
 
 .main_nav {
@@ -343,6 +349,12 @@ body {
     height: inherit;
  }
 
+ @media only screen and (max-width: 900px) {
+    .section_subtext {
+        margin-bottom: 8%;
+    }
+}
+
 /* Destination Section Styles  ---------------- */
 
 .destination_section {
@@ -352,7 +364,7 @@ body {
 
 .destination_wrapper {
     display: grid;
-    grid-template-columns: 600px 1fr 1fr 1fr;
+    grid-template-columns: 600px repeat(3, 1fr);
     grid-template-rows: 304px 304px;
     justify-content: center;
 }
@@ -371,7 +383,7 @@ body {
 }
 
 .destination_link:hover {
-    transform: scale(1.02);
+    transform: scale(1.03);
     transition: .2s ease-in-out;
 }
 
@@ -453,10 +465,8 @@ body {
 
 @media only screen and (max-width: 1330px) {  
     .destination_wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 310px 310px 310px  ;
-        justify-content: center;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr repeat(3, 310px);
     }
 
     .destination_link {
@@ -567,7 +577,7 @@ body {
 
 .activities_section {
     background-color: #fff;
-    margin: 7% 17% 10%;
+    margin: 7% 17% 3%;
 }
 
 .activities_wrapper {
@@ -588,7 +598,7 @@ body {
     transition: .2s ease-in-out;
 }
 
-.activities_post:hover {
+.activity_link:hover {
     transform: scale(1.02);
     transition: .2s ease-in-out;
 }
@@ -653,10 +663,7 @@ body {
 
 @media only screen and (max-width: 1330px) {
     .activities_wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 330px 330px;
-        justify-content: center;
     }
 
     .activity_link {
@@ -692,10 +699,8 @@ body {
 
 @media only screen and (max-width: 900px) {
     .activities_wrapper {
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, 420px);
-        justify-content: center;
     }
     
     .activity_one {
@@ -738,7 +743,7 @@ body {
 
 .restaurants_wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 333px 333px;
     justify-content: center;
 }
@@ -766,7 +771,7 @@ body {
 }
 
 .restaurant_one {
-    grid-column: 3 / 6;
+    grid-column: 1 / 3;
     grid-row: 1 / 3;
     height: 650px;
     width: inherit;
@@ -780,7 +785,7 @@ body {
 }
 
 .restaurant_two {
-    grid-column: 2 / 3;
+    grid-column: 3 / 4;
     grid-row: 1 / 2;
     background: url(../images/restaurants/restaurant2.jpg);
     background-position: center;
@@ -818,10 +823,7 @@ body {
 
 @media only screen and (max-width: 1330px) {
     .restaurants_wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 330px 330px;
-        justify-content: center;
     }
 
     .restaurant_link {
@@ -857,10 +859,8 @@ body {
 
 @media only screen and (max-width: 900px) {
     .restaurants_wrapper {
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, 420px);
-        justify-content: center;
     }
     
     .restaurant_one {
@@ -895,15 +895,15 @@ body {
 
 }
 
-/* Divider section Styles  ---------------- */
+/* subscribe section Styles  ---------------- */
 
-.divider_section {
+.subscribe_section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 550px;
     width: 100%;
-    background: url(../images/divider/things.jpg);
+    background: url(../images/divider/stuff.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -912,17 +912,17 @@ body {
     margin-bottom: 5.25%;
 }
 
-.divider_content {
+.subscribe_content {
     text-align: center;
 }
 
-.divider_title {
+.subscribe_title {
     font-size: 3em;
     margin-bottom: 20px;
     text-shadow: -1px 1px 1px #000;
 }
 
-.divider_button {
+.subscribe_button {
     color: #fff;
     font-size: 1em;
     line-height: 1em;
@@ -934,22 +934,15 @@ body {
     border-radius: 5px;
 }
 
-.divider_button:hover {
+.subscribe_button:hover {
     background-color: #e26f6f;
     border: 1px solid #e26f6f;
 }
 
-@media only screen and (max-width: 1200px) {
-    .divider_section {
-        height: 450px;
+@media only screen and (max-width: 1330px) {
+    .subscribe_section {
+        display: none;
     }
-}
-
-@media only screen and (max-width: 900px) {
- .divider_section {
-     display: none;
- }
-
 }
 
 /* contact section Styles  ---------------- */
@@ -1015,8 +1008,6 @@ body {
 /* Footer and Social Icon Styles  ---------------- */
 
 .main_footer {
-    position: relative;
-    width: 100%;
     background-color: #2d3240;
     color: #fff;
     padding: 2% 0;
