--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -63,7 +63,7 @@ body {
     position: fixed;
     top: 0;
     color: #fff;
-    height: 100px;
+    height: 90px;
     width: 100%;
     z-index: 2;
     transition: .5s;
@@ -71,78 +71,11 @@ body {
 
 .main_nav.blue {
     background-color: rgba(35, 40, 55, 0.95);
-    height: 100px;
+    height: 90px;
 }
 
 .nav_menu-wrapper {
     display: none;
-}
-
-.logo_wrapper {
-    height: 100px;
-    margin-left: 14%;
-    display: flex;
-}
-
-.logo_image {
-    height: 2.5em;
-    width: 2.5em;
-    border-radius: 5px;
-    align-self: center;
-    margin-right: 15px;
-    filter: drop-shadow(-1px 1px 1px #000);
-}
-
-.logo_text {
-    font-family: 'quicksand';
-    color: #fff;
-    font-weight: 700;
-    font-size: 1.5em;
-    letter-spacing: 1px;
-    text-decoration: none;
-    text-shadow: -2px 2px 1px #000;
-    align-self: center;
-    z-index: 2;
-    transition: .3s;
-}
-
-.nav_list-wrapper {
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100px;
-    width: 100%;
-    margin-right: 14%;
-}
-
-.nav_list {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    height: 100px;
-    font-size: .95em;
-}
-
-.nav_list-items {
-    align-items: center;
-    list-style-type: none;
-}
-
-.nav_list-items:first-child {
-    padding-right: 40px;
-}
-
-.nav_list-items:nth-child(2){
-    padding-right: 40px;
-}
-
-
-.item_link {
-    font-family: "Montserrat";
-    font-size: 1.15em;
-    color: #fff;
-    text-decoration: none;
-    text-shadow: -2px 2px 0px #000;
 }
 
 #nav:checked ~ .nav_menu-wrapper .nav_list-wrapper .nav_list {
@@ -179,6 +112,79 @@ body {
     display: none;
 }
 
+.logo_wrapper {
+    height: 90px;
+    margin-left: 14%;
+    display: flex;
+}
+
+.logo_image {
+    height: 2em;
+    width: 2em;
+    border-radius: 5px;
+    align-self: center;
+    margin-right: 10px;
+    filter: drop-shadow(-1px 1px 1px #000);
+}
+
+.logo_text {
+    font-family: 'quicksand' , sans-serif;
+    color: #fff;
+    font-weight: 700;
+    font-size: 1.35em;
+    letter-spacing: 1px;
+    text-decoration: none;
+    text-shadow: -2px 2px 1px #000;
+    align-self: center;
+    z-index: 2;
+    transition: .3s;
+}
+
+.nav_list-wrapper {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 90px;
+    width: 100%;
+    margin-right: 14%;
+}
+
+.nav_list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 90px;
+    font-size: .95em;
+}
+
+.nav_list-items {
+    align-items: center;
+    list-style-type: none;
+}
+
+.nav_list-items:first-child {
+    padding-right: 40px;
+}
+
+.nav_list-items:nth-child(2){
+    padding-right: 40px;
+}
+
+
+.item_link {
+    font-family: "Quicksand" , sans-serif;
+    font-size: 1.25em;
+    color: #fff;
+    text-decoration: none;
+    text-shadow: -2px 2px 0px #000;
+}
+
+#nav:checked ~ .nav_menu-wrapper .nav_list-wrapper .nav_list {
+    display: flex;
+    flex-direction: column; 
+    height: 100vh;
+    width: 100%;
+}
 
 @media only screen and (max-width: 950px) {
     .nav_list-wrapper {
@@ -190,7 +196,6 @@ body {
     .nav_list {
         display: block;
         text-align: center;
-        height: 100px;
         font-size: .95em;
     }
 
@@ -212,7 +217,7 @@ body {
 
     .nav_menu-wrapper {
         display: flex;
-        height: 100px;
+        height: 90px;
         width: 100%;
         position: fixed;
         align-items: center;
