--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -22,8 +22,8 @@ body {
 .background-image {
     height: 65vh;
     width: 100%;
-    background: url(../images/heros/discover-hero.jpg);
-    background-position: center;
+    background: url(../images/heros/clouds-dawn-desktop-backgrounds-46253-min.jpg);
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -34,7 +34,7 @@ body {
     display: block;
     background-color: #000;
     height: 65vh;
-    opacity: 0.1;
+    opacity: 0.09;
     width: 100%;
     z-index: 1;
 }
