--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -20,10 +20,10 @@ body {
 /* Hero Image Styles ------------------------------------------------  */
 
 .background-image {
-    background: url(/assets/images/heros/main-hero.jpg);
+    background: url(/assets/images/heros/discover-hero.jpg);
     height: 65vh;
     width: 100%;
-    background-position: bottom;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -34,7 +34,7 @@ body {
     display: block;
     background-color: #000;
     height: 65vh;
-    opacity: 0.09;
+    opacity: 0.15;
     width: 100%;
 }
 
