--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -39,6 +39,12 @@ body {
     z-index: 1;
 }
 
+@media only screen and (max-width: 1330px) {
+    .background-image {
+        background-attachment: scroll;
+    }
+ }
+
 @media only screen and (max-width: 900px) {
     .background-image {
         margin-bottom: 8%;
