--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -288,6 +288,12 @@ body {
     animation-delay: .4s;
 }
 
+@media only screen and (max-width: 980px) and (max-height: 661px) {
+   .button {
+       display: none;
+   }
+}
+
 @media only screen and (max-width: 950px) {
     .header_title {
         font-size: 5em;
