--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -429,6 +429,9 @@ body {
 }
 
 @media only screen and (max-width: 425px) {
+    .main_header {
+        top: 90%;
+    }
 
     .header_title {
         font-size: 6em;
