--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -148,7 +148,7 @@ body {
     align-items: center;
     justify-content: flex-end;
     height: 90px;
-    font-size: .95em;
+    font-size: .8em;
 }
 
 .nav_list-items {
@@ -302,7 +302,17 @@ body {
 
 @media only screen and (max-width: 950px) {
     .header_title {
-        font-size: 5em;
+        font-size: 3em;
+    }
+}
+
+@media only screen and (max-width: 768px) and (max-height: 1024px) {
+    .header_title {
+        font-size: 3.25em;
+    }
+
+    .header_description {
+        font-size: 1.2em;
     }
 }
 
@@ -312,25 +322,22 @@ body {
     }
 }
 
-@media only screen and (max-width: 750px) {
+
+@media only screen and (max-width: 640px) {
     .header_title {
-        font-size: 4em;
+       line-height: 1em;
     }
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 425px) {
     .header_title {
-        font-size: 3em;
+        font-size: 2em;
     }
 }
 
 @media only screen and (max-width: 385px) {
     .main_header {
         top: 34%;
-    }
-    
-    .header_title {
-        line-height: 1em;
     }
 }
 
