--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -55,6 +55,12 @@ body {
    }
 }
 
+@media only screen and (max-height: 1000px) {
+    .background-image {
+       height: 100vh;
+    }
+ }
+
 /* Section Divider Tags Styles ------------------------------------------------  */
 
 .section_title {
@@ -184,7 +190,7 @@ body {
     align-items: center;
     height: 90px;
     justify-content: flex-end;
-    font-size: .95em;
+    font-size: .8em;
 }
 
 .nav_list-items{
@@ -311,7 +317,7 @@ body {
 
 .header_title {
     font-family: "Cambay" , sans-serif;
-    font-size: 10em;
+    font-size: 9em;
     font-weight: 800;
     letter-spacing: -5px;
     color: #fff;
@@ -337,7 +343,7 @@ body {
     font-family: "Cambay";
     font-weight: 600;
     color: #fff;
-    font-size: 1.6em;
+    font-size: 1.4em;
     text-align: center;
     line-height: 1.5em;
     letter-spacing: 1.25px;
@@ -367,14 +373,8 @@ body {
     .main_header {
         top: 36%;
     }
-    
-    .header_title {
-        font-size: 9em;
-    }
 
     .header_description {
-        font-size: 1.6em;
-        margin-top: 3.5em;
         width: 100%;
     }
 
@@ -393,6 +393,12 @@ body {
    }
  }
 
+ @media only screen and (max-height: 1000px) {
+    .main_header {
+       top: 50%;
+    }
+ }
+
 @media only screen and (max-width: 1024px) and (max-height: 768px) {
      .button {
         display: none;
@@ -405,9 +411,9 @@ body {
     }
 }
 
+
 @media only screen and (max-width: 950px) {
     .header_title {
-        font-size: 9em;
         width: 100%;
     }
 
@@ -416,12 +422,54 @@ body {
     }
 
     .header_description {
-        font-size: 1.45em;
+        margin-top: 3em;
+        font-size: 1.3em;
     }
 
     .button {
         width: 50%;
         text-align: center;
+    }
+}
+
+@media only screen and (max-width: 950px) and (max-height: 850px) {
+    
+    .header_title {
+        font-size: 4.5em;
+        width: 100%;
+    }
+
+    .header_title::after {
+        display: none;
+    }
+
+    .header_description {
+        margin-top: 2.5em;
+        font-size: 1.1em;
+    }
+
+    .button {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 768px) and (max-height: 1016px) {
+    .header_title {
+        font-size: 6em;
+    }
+
+    .header_description {
+        font-size: 1.2em;
+    }
+}
+
+@media only screen and (max-width: 768px) and (max-height: 850px) {
+    .header_title {
+        font-size: 4em;
+    }
+
+    .header_description {
+        font-size: 1.1em;
     }
 }
 
@@ -439,14 +487,7 @@ body {
     .main_header {
         width: 80vw;
     }
-    
-    .header_title {
-        font-size: 8em;
-    }
-
-    .header_description {
-        font-size: 1.3em;
-    }
+   
 
     .button {
         display: none;
@@ -455,22 +496,22 @@ body {
 
 @media only screen and (max-width: 425px) {
     .header_title {
-        font-size: 6em;
+        font-size: 4em;
     }
 
     .header_description {
-        font-size: 1.1em;
+        font-size: 1em;
     }
 }
 
 @media only screen and (max-width: 330px) {
 
     .header_title {
-        font-size: 4em;
+        font-size: 3.25em;
     }
 
     .header_description {
-        font-size: 1em;
+        font-size: .9em;
     }
 }
 
@@ -607,13 +648,13 @@ body {
 }
 
 .post_heading {
-    font-size: 1.4em;
+    font-size: 1.2em;
     align-self: center;
     margin-bottom: 0.438em;
 }
 
 .post_description {
-    font-size: 1em;
+    font-size: .9em;
     text-align: left;
     align-self :center;
     margin-bottom: 20px;
@@ -873,7 +914,7 @@ body {
 }
 
 
-@media only screen and (max-width: 1900px) {
+@media only screen and (max-width: 2150px) {
     .content_right-wrapper {
         background-color: #2d3240;
         padding: 65px 60px;
