--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -20,7 +20,7 @@ body {
 /* Hero Image Styles ------------------------------------------------  */
 
 .background-image {
-    background: url(/assets/images/heros/main-hero.jpeg);
+    background: url(/assets/images/heros/main-hero.jpg);
     background-color: linear-gradient(to left bottom, #051937, #3e205b, #850464, #c5004c, #eb1212);
     height: 65vh;
     width: 100%;
@@ -30,21 +30,8 @@ body {
     background-attachment: fixed;
 }
 
-.background-image::before {
-    content: '';
-    display: block;
-    background-color: #000;
-    height: 65vh;
-    opacity: 0.3;
-    width: 100%;
-}
-
 @media only screen and (max-width: 1440px) and (max-height: 1400px) {
     .background-image {
-        height: 100vh;
-    }
-
-    .background-image::before {
         height: 100vh;
     }
 }
@@ -391,6 +378,11 @@ body {
    .header_description {
        font-size: 1.1em;
    }
+
+   .button {
+        font-size: 1em;
+        padding: 20px 38px 16px;
+    }
  }
 
  @media only screen and (max-height: 1000px) {
