--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -623,19 +623,16 @@ body {
 }
 
 .post_overlay {
-    height: fit-content;
     display: none;
-    position: absolute;
     color: #fff;
-    bottom: 0;
-    background: linear-gradient(to bottom, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.9) 75%);
+    background: linear-gradient(to top, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.9) 75%);
 }
 
 .article_link:hover .post_overlay {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 12% 10%;
+    padding: 5% 10% 10%;
     text-align: center;
 }
 
