--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -632,7 +632,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5% 10% 10%;
+    padding: 7% 10% 10%;
     text-align: center;
 }
 
@@ -668,6 +668,14 @@ body {
     .post_description {
         font-size: .8em;
     }
+
+    .article_link:hover .post_overlay {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 15% 10% 10%;
+        text-align: center;
+    }
 }
 
 
@@ -676,21 +684,19 @@ body {
         grid-template-columns: 1fr 1fr;
     }
 
-    .post_overlay {
-        display: block;
-        position: relative;
-        height: auto;
-        padding: 12% 10%;
-        background: linear-gradient(to top, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.8) 99%);
-    }
-
     .article_link:hover {
         transform: none;
+        transition: none;
     }
-    
+
+
+    .post_overlay {
+        display: block;
+        padding: 15% 10% 10%;
+    }
+  
     .post_heading {
         text-align: center;
-        text-shadow: -2px 2px 2px #888;
     }
 
     .post_description {
@@ -704,12 +710,17 @@ body {
         grid-template-columns: 1fr;
     }
 
+    .post_overlay {
+        display: block;
+        padding: 15% 10% 10%;
+    }
+
     .post_heading {
-        font-size: 1.6em;
+        font-size: 1.2em;
     }
 
     .post_description {
-        font-size: 1.25em;
+        font-size: 1em;
     }
 }
 
@@ -717,11 +728,11 @@ body {
 @media only screen and (max-width: 630px) {
 
     .post_heading {
-        font-size: 1.4em;
+        font-size: 1.1em;
     }
 
     .post_description {
-        font-size: 1em;
+        font-size: .9em;
     }
 }
 
@@ -735,14 +746,36 @@ body {
     }
 }
 
+@media only screen and (max-width: 630px) {
 
-@media only screen and (max-width: 320px) {
     .post_heading {
         font-size: 1em;
     }
 
     .post_description {
+        font-size: .8em;
+    }
+}
+
+
+@media only screen and (max-width: 350px) {
+    .post_heading {
         font-size: .9em;
+    }
+
+    .post_description {
+        font-size: .75em;
+    }
+
+}
+
+@media only screen and (max-width: 280px) {
+    .post_heading {
+        font-size: .9em;
+    }
+
+    .post_description {
+        font-size: .65em;
     }
 
 }
