--- a/assets/styles/subscribe.css
+++ b/assets/styles/subscribe.css
@@ -35,6 +35,13 @@ body {
     display: none;
 }
 
+#nav:checked ~ .nav_menu-wrapper .nav_list-wrapper .nav_list {
+    display: flex;
+    flex-direction: column; 
+    height: 100vh;
+    width: 100%;
+}
+
 #nav:checked ~  .nav_list-wrapper .nav_list .nav_list-items .item_link {
     opacity: 1;
     display: block;
@@ -122,24 +129,23 @@ body {
 
 
 .item_link {
-    font-family: "Quicksand" , sans-serif;
+    font-family: 'Cambay', sans-serif;
     font-size: 1.25em;
+    font-weight: 400;
     color: #fff;
     text-decoration: none;
-    text-shadow: -2px 2px 0px #000;
+    text-shadow: -1px 2px 2px #000;
+    transition: .6s;
 }
 
-#nav:checked ~ .nav_menu-wrapper .nav_list-wrapper .nav_list {
-    display: flex;
-    flex-direction: column; 
-    height: 100vh;
-    width: 100%;
+.active {
+    color: #e34e4e;
 }
 
-#nav:checked ~  .nav_list-wrapper .nav_list .nav_list-items .item_link {
-    opacity: 1;
-    display: block;
+.item_link:hover {
+    color: #e34e4e;
 }
+
 
 @media only screen and (max-width: 1440px) and (max-height: 1400px) {
     .nav_list {
@@ -226,10 +232,6 @@ body {
 }
 
 @media only screen and (max-width: 570px) {
-   .logo_text {
-       z-index: -999;
-   }
-   
     .nav_list-items:first-child {
         margin-top: 45%;
         padding-right: 0px;
